@@ -1,5 +1,6 @@
 0.8.8
 -----
+  * Support as a dracut module
   * New command: calibrate
   * Add disable_cpu_apicid parameter to the command line on x86 to prevent
     bringing up the BSP in the kdump kernel.
